# better_term

./: .gitignore  Cargo.toml  README.md
doc/: crates.js  rustdoc.css  search-index.js  settings.html  source-files.js
doc/better_term/: all.html  enum.Color.html  index.html  sidebar-items.js  struct.Style.html
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.PartialEq.js
doc/implementors/core/default/: trait.Default.js
doc/implementors/core/fmt/: trait.Display.js
doc/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
doc/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/src/better_term/: lib.rs.html
src/: fancy.rs  input.rs  lib.rs  style.rs
