[package]
name = "better_term"
version = "1.0.3"
authors = ["Skepz"]
edition = "2021"
description = "A crate for ANSI output in the terminal"
repository = "https://github.com/Sk3pz/better_term"
license = "MIT"
keywords = ["terminal", "ansi", "console"]
categories = ["command-line-utilities"]

[dependencies]
