[package]
name = "better_term"
version = "1.2.5"
authors = ["Skepz"]
edition = "2021"
description = "A crate that makes using the terminal easier."
repository = "https://github.com/Sk3pz/better_term"
license = "MIT"
keywords = ["terminal", "ansi", "console", "io"]
categories = ["command-line-utilities"]

[dependencies]

[features]
default = ["input"]
input = []