[package]
name = "better_term"
version = "1.3.7"
authors = ["Skepz"]
edition = "2021"
description = "A crate that makes using the terminal easier."
repository = "https://github.com/Sk3pz/better_term"
documentation = "https://docs.rs/better_term/latest/better_term/index.html"
license = "MIT"
keywords = ["terminal", "ansi", "console", "io"]
categories = ["command-line-utilities"]

[dependencies]

[features]
default = ["input", "output"]
input = []
output = []